--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "javascript",
   "version": "1.0.0",
+  "type": "module",
   "description": "algorithm implementation javascript",
-  "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test-changed":  "jest --onlyChanged",
+    "test-changed": "jest --onlyChanged",
     "style": "standard",
     "prepare": "husky install"
   },
@@ -19,13 +19,22 @@
   "author": "arfy slowy",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/preset-env": "^7.19.4"
+  },
+  "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
     "@types/jest": "^29.1.2",
     "babel-jest": "^29.2.0",
     "globby": "^13.1.2",
     "husky": "^8.0.1",
     "jest": "^29.2.0",
+    "prettier": "2.8.0",
     "standard": "^17.0.0"
+  },
+  "engines": {
+    "node": ">=16.6.0"
   },
   "standard": {
     "env": [
